#131 - rich assertions - final cleanups - documentation updates